<resources>
    <string name="app_name">spectrumTask2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="phone_number">Phone Number</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="profile_image">profile image</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_register_click_here_for_login">Already Registered! Click here for login</string>
    <string name="welcome">WELCOME</string>
    <string name="enter_your_task_here">Enter Your Task Here</string>
    <string name="enter_task">Enter Task</string>
    <string name="ashish">ASHISH</string>
    <string name="pdf_maker">PDF Maker</string>
    <string name="time_table_viewer">Time Table Viewer</string>
    <string name="reminder">Reminder</string>
    <string name="document_storage">document storage</string>
    <string name="to_do_list">to-do list</string>
    <string name="calculator">Calculator</string>
    <string name="poc_section">poc section</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dept">Dept</string>
    <string name="regd_no">Regd no.</string>
    <string name="create_id_card">Create ID Card</string>
    <string name="address_dist">Address(DIST)</string>
    <string name="time">Timetable</string>
    <string name="message">Message</string>
    <string name="set">SET</string>
    <string name="cancel">CANCEL</string>
    <string name="r">Reminder</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="image">Image</string>
    <string name="add_new_task">add new task</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="save">SAVE</string>
    <string name="july_30_2021">July 30, 2021</string>
    <string name="update_your_task">Update your task</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="displyHint">Enter a Value</string>

    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="clearText">C</string>
    <string name="parenthesesOpenText">(</string>
    <string name="parenthesesCloseText">)</string>
    <string name="divideText">÷</string>
    <string name="multiplyText">×</string>
    <string name="addText">+</string>
    <string name="subtractText">-</string>
    <string name="decimalText">.</string>
    <string name="equalsText">=</string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigArcSinText">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCosText">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTanText">tan<sup><small>-1</small></sup></string>
    <string name="naturalLogText">ln</string>
    <string name="LogText">log</string>
    <string name="squareRootText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="isPrimeFunctionText">prime</string>

    <string name="backspace"> </string>
    <string name="mechanical">mechanical</string>
    <string name="_1st_year">1st year</string>
    <string name="_2nd_year">2nd year</string>
    <string name="_3rd_year">3rd year</string>
    <string name="_4th_year">4th year</string>
    <string name="_1234567890">1234567890</string>
    <string name="architecture">Architecture</string>
    <string name="civil_engineering">Civil Engineering</string>
    <string name="computer_science_application"><![CDATA[Computer Science & Application(MCA)]]></string>
    <string name="cse"><![CDATA[Computer Science & Engineering]]></string>
    <string name="ee">Electrical Engineering</string>
    <string name="fae">Fashion and Apparel Engineering</string>
    <string name="it">Information Technology</string>
    <string name="iee">Instrument and Electrical Engineering</string>
    <string name="textile_engineering">Textile Engineering</string>
    <string name="planning">Planning</string>
    <string name="mathematics_and_humanities">Mathematics and Humanities</string>
    <string name="_5th_year">5th year</string>
    <string name="physics">Physics</string>
    <string name="chem">Chemistry</string>
</resources>