<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Dashboard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/logoutD"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:drawable/ic_lock_power_off"
                    app:backgroundTint="#ED7C3E"
                    app:iconTint="#E81414"
                    android:layout_marginEnd="10dp"
                    android:onClick="signout"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/pdf_maker"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    tools:ignore="NestedWeights"
                    android:onClick="pdfMaker"
                    android:textStyle="bold"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/time_table_viewer"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:onClick="timeTableViewer"
                    android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/reminder"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    tools:ignore="NestedWeights"
                    android:onClick="reminder"
                    android:textStyle="bold"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/document_storage"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:onClick="documentStorage"
                    android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/to_do_list"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    tools:ignore="NestedWeights"
                    android:onClick="toDoList"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/calculator"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:onClick="calculator"
                    android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="3"
            android:orientation="horizontal">
                <Button
                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:text="@string/poc_section"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:onClick="pocSection"
                    android:textStyle="bold"/>
        </LinearLayout>


</LinearLayout>