<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_a_new_task"
        android:gravity="center"
        android:background="#126568"
        android:padding="10dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/task"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/task"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/task"
                android:inputType="text"
                android:minHeight="48dp"
                android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/description"
                android:textColor="#000"
                android:textStyle="bold" />

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="4"
            android:hint="@string/description"
            android:inputType="text"
            android:minHeight="48dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <Button
                android:id="@+id/CancelBtn"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="@color/black"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <Button
                android:id="@+id/saveBtn"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="@color/black"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>